--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer:
 # Author
 author: "Eunbi Park"
 nickname: Silver Rain'
-bio: "Freont-end developer"
+bio: "Front-end developer"
 avatar: "/assets/img/profile.png"
 
 # Search
