--- a/_config.yml
+++ b/_config.yml
@@ -85,4 +85,4 @@ RSS: false
 permalink: /:year/:month/:day/:title.html
 
 # Plugins
-plugins: [jekyll-paginate]
+plugins: [jekyll-paginate, jekyll-sitemap, jekyll-seo-tag]
